@@ -241,9 +241,14 @@ while(<$inf>) {
 	and $_ = "\n=head3 $1\n";
 
     # Block command handlers:
-    /^\@itemize\s+(\@[a-z]+|\*|-)/ and do {
+    /^\@itemize(?:\s+(\@[a-z]+|\*|-))?/ and do {
 	push @endwstack, $endw;
 	push @icstack, $ic;
+	if (defined $1) {
+	    $ic = $1;
+	} else {
+	    $ic = '@bullet';
+	}
 	$ic = $1;
 	$_ = "\n=over 4\n";
 	$endw = "itemize";
